--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,26 @@ git:
 
 sudo: required
 
+env:
+  - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
+
 matrix:
   include:
     - env:
         - GCC_VERSION="6"
         - HUB="cmbant/docker-gcc-build:gcc6"
-        - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
+    - env:
+        - GCC_VERSION="7"
+        - HUB="cmbant/docker-gcc-build:gcc7"
     - env:
         - GCC_VERSION="8"
         - HUB="cmbant/docker-gcc-build:gcc8"
-        - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
     - env:
         - GCC_VERSION="trunk"
         - HUB="zbeekman/nightly-gcc-trunk-docker-image"
         - COMMAND="-c /forutils/tests/run_tests.sh"
+  allow_failures:
+        - env: GCC_VERSION="trunk"
  
 services:
   - docker
