--- a/.travis.yml
+++ b/.travis.yml
@@ -7,24 +7,28 @@ sudo: required
 
 matrix:
   include:
-    - env:
+    - name: "GCC6"
+      env:
         - GCC_VERSION="6"
         - HUB="cmbant/docker-gcc-build:gcc6"
         - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
-    - env:
+    - name: "GCC7" 
+      env:
         - GCC_VERSION="7"
         - HUB="cmbant/docker-gcc-build:gcc7"
         - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
-    - env:
+    - name: "GCC8"
+      env:
         - GCC_VERSION="8"
         - HUB="cmbant/docker-gcc-build:gcc8"
         - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
-    - env:
+    - name: "trunk"
+      env:
         - GCC_VERSION="trunk"
         - HUB="zbeekman/nightly-gcc-trunk-docker-image"
         - COMMAND="-c /forutils/tests/run_tests.sh"
   allow_failures:
-        - env: GCC_VERSION="trunk"
+        - name: "trunk"
  
 services:
   - docker
