Makefile tweaks and ranges tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,17 +7,15 @@ include ../Makefile_compiler
 
 export
 
-Debug: libforutils
+Debug:
+	@$(MAKE) -C '..' $(MAKEOPT) Debug
 	@$(MAKE) tester_Debug OUTPUT=Debug F90FLAGS="$(F90DEBUGFLAGS) $(F90COMMONFLAGS)" $(MAKEOPT)
 
-Release: libforutils
+Release:
+	@$(MAKE) -C '..' $(MAKEOPT) Release
 	@$(MAKE) tester_Release OUTPUT=Release F90FLAGS="$(F90RELEASEFLAGS) $(F90COMMONFLAGS)" $(MAKEOPT)
 
 OUTPUT_DIR=../$(OUTPUT)
-
-libforutils:
-	@$(MAKE) -C '..' $(MAKEOPT) $(OUTPUT)
-
 
 FILES = array_tests ObjectLists_tests interpolation_tests inifile_tests \
         file_tests string_tests ranges_tests run_tests
@@ -27,10 +25,19 @@ OBJS = $(patsubst %,$(OUTPUT_DIR)/%.o,$(FILES))
 tester_$(OUTPUT): $(OUTPUT_DIR)/libforutils.a $(OBJS)
 	$(F90C) $(F90FLAGS) $(OBJS) -o $@ -L$(OUTPUT_DIR) -lforutils
 
-$(OUTPUT_DIR)/%.o: %.f90
+$(OUTPUT_DIR)/%.o: %.f90 $(OUTPUT_DIR)/compiler.ver
 	$(F90C) $(F90FLAGS) $(MODLINK)$(OUTPUT_DIR) -c $< -o $(OUTPUT_DIR)/$*.o
+
+run: Release Debug
+	./tester_Debug
+	./tester_Release
+	@echo 'All Ok'
 
 clean:
 	@$(MAKE) -C '..' $(MAKEOPT) clean
+	rm -f _*.ini _*.txt *.bin
 
-.PHONY: libforutils Debug Release clean
+delete: clean
+	rm -f tester_*
+
+.PHONY: Debug Release clean test clean
