compiler version check errors/warnings

--- a/Makefile_compiler
+++ b/Makefile_compiler
@@ -44,7 +44,12 @@ endif
 
 else
 
+major_version = $(shell gfortran -dumpversion 2>&1 | cut -d " " -f 3 | cut -d. -f 1)
+ifneq ($(shell test $(major_version) -gt 5; echo $$?),0)
+$(error gfortran version 6.3 or higher is required)
+endif
 compiler_ver = $(shell gfortran -dumpversion 2>&1)
+
 F90C ?= gfortran
 F90COMMONFLAGS ?= -cpp -ffree-line-length-none -fmax-errors=4 -MMD -fopenmp -fPIC
 F90DEBUGFLAGS ?= -g -O0 -fbacktrace
