new devel docker test

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,22 +11,18 @@ matrix:
       env:
         - GCC_VERSION="7"
         - HUB="cmbant/docker-gcc-build:gcc7"
-        - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
     - name: "GCC8"
       env:
         - GCC_VERSION="8"
         - HUB="cmbant/docker-gcc-build:gcc8"
-        - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
     - name: "GCC9"
       env:
         - GCC_VERSION="9"
         - HUB="cmbant/docker-gcc-build:gcc9"
-        - COMMAND="/bin/bash -c /forutils/tests/run_tests.sh"
     - name: "trunk"
       env:
         - GCC_VERSION="trunk"
         - HUB="cmbant/docker-gcc-build:devel"
-        - COMMAND="-c /forutils/tests/run_tests.sh"
  
 services:
   - docker
@@ -38,6 +34,6 @@ install:
   - chmod +x tests/run_tests.sh
      
 script:
-  - docker run -v $(pwd):/forutils -t $HUB $COMMAND
+  - docker run -v $(pwd):/forutils -t $HUB /bin/bash -c /forutils/tests/run_tests.sh
 
 
