--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-language: sh
+os: linux
+language: shell
+dist: bionic
 
 git:
   depth: false
 
-sudo: required
-
-matrix:
+jobs:
   include:
     - name: "GCC7" 
       env:
