--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ services:
   - docker
 
 before_install:
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker pull $HUB
 
 install:
